--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>연애 마법의 소라고동</title>
+    <title>러브 마스터 소라고동</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="firefly-container"></div>
     <div class="container">
         <div>
-            <h1>연애 마법의 소라고동</h1>
+            <h1>러브 마스터 소라고동</h1>
         </div>
         <div class="q_container">
             <div class="question-box">
