--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="answerBox" class="answer-box"></div>
         </div>
     </div>
-    
+    <audio id="magicSound" src="./music.mp3" muted autoplay></audio>
 
     <script src="script.js"></script>
 </body>
